// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot 1`] = `
<ReactionBadge
  reaction={
    <Reaction
      name="haha"
    />
  }
>
  <ButtonPill
    className="md-reaction-badge-wrapper"
    data-count={1}
    data-reacted={false}
    size={20}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-reaction-badge-wrapper"
      data-color="primary"
      data-count={1}
      data-disabled={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-outline={false}
      data-reacted={false}
      data-shallow-disabled={false}
      data-size={20}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-reaction-badge-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-count={1}
            data-disabled={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-outline={false}
            data-reacted={false}
            data-shallow-disabled={false}
            data-size={20}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper md-icon-scales"
                data-name="haha"
                data-scale={12}
              />
            </Reaction>
            <span
              className="reaction-badge-count"
            />
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</ReactionBadge>
`;

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot with className 1`] = `
<ReactionBadge
  className="example-class"
  reaction={
    <Reaction
      name="haha"
    />
  }
>
  <ButtonPill
    className="example-class md-reaction-badge-wrapper"
    data-count={1}
    data-reacted={false}
    size={20}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper example-class md-reaction-badge-wrapper"
      data-color="primary"
      data-count={1}
      data-disabled={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-outline={false}
      data-reacted={false}
      data-shallow-disabled={false}
      data-size={20}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper example-class md-reaction-badge-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-count={1}
            data-disabled={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-outline={false}
            data-reacted={false}
            data-shallow-disabled={false}
            data-size={20}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper md-icon-scales"
                data-name="haha"
                data-scale={12}
              />
            </Reaction>
            <span
              className="reaction-badge-count"
            />
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</ReactionBadge>
`;

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot with count 1`] = `
<ReactionBadge
  count={1}
  reaction={
    <Reaction
      name="haha"
    />
  }
>
  <ButtonPill
    className="md-reaction-badge-wrapper"
    data-count={1}
    data-reacted={false}
    size={20}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-reaction-badge-wrapper"
      data-color="primary"
      data-count={1}
      data-disabled={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-outline={false}
      data-reacted={false}
      data-shallow-disabled={false}
      data-size={20}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-reaction-badge-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-count={1}
            data-disabled={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-outline={false}
            data-reacted={false}
            data-shallow-disabled={false}
            data-size={20}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper md-icon-scales"
                data-name="haha"
                data-scale={12}
              />
            </Reaction>
            <span
              className="reaction-badge-count"
            >
              1
            </span>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</ReactionBadge>
`;

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot with id 1`] = `
<ReactionBadge
  id="example-id"
  reaction={
    <Reaction
      name="haha"
    />
  }
>
  <ButtonPill
    className="md-reaction-badge-wrapper"
    data-count={1}
    data-reacted={false}
    id="example-id"
    size={20}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-reaction-badge-wrapper"
      data-color="primary"
      data-count={1}
      data-disabled={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-outline={false}
      data-reacted={false}
      data-shallow-disabled={false}
      data-size={20}
      id="example-id"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-reaction-badge-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-count={1}
            data-disabled={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-outline={false}
            data-reacted={false}
            data-shallow-disabled={false}
            data-size={20}
            id="example-id"
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper md-icon-scales"
                data-name="haha"
                data-scale={12}
              />
            </Reaction>
            <span
              className="reaction-badge-count"
            />
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</ReactionBadge>
`;

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot with reacted 1`] = `
<ReactionBadge
  reacted={true}
  reaction={
    <Reaction
      name="haha"
    />
  }
>
  <ButtonPill
    className="md-reaction-badge-wrapper"
    data-count={1}
    data-reacted={true}
    size={20}
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-reaction-badge-wrapper"
      data-color="primary"
      data-count={1}
      data-disabled={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-outline={false}
      data-reacted={true}
      data-shallow-disabled={false}
      data-size={20}
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-reaction-badge-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-count={1}
            data-disabled={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-outline={false}
            data-reacted={true}
            data-shallow-disabled={false}
            data-size={20}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper md-icon-scales"
                data-name="haha"
                data-scale={12}
              />
            </Reaction>
            <span
              className="reaction-badge-count"
            />
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</ReactionBadge>
`;

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot with style 1`] = `
<ReactionBadge
  reaction={
    <Reaction
      name="haha"
    />
  }
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonPill
    className="md-reaction-badge-wrapper"
    data-count={1}
    data-reacted={false}
    size={20}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <ButtonSimple
      aria-disabled={false}
      className="md-button-pill-wrapper md-reaction-badge-wrapper"
      data-color="primary"
      data-count={1}
      data-disabled={false}
      data-ghost={false}
      data-grown={false}
      data-inverted={false}
      data-outline={false}
      data-reacted={false}
      data-shallow-disabled={false}
      data-size={20}
      style={
        Object {
          "color": "pink",
        }
      }
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            className="md-button-pill-wrapper md-reaction-badge-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-count={1}
            data-disabled={false}
            data-ghost={false}
            data-grown={false}
            data-inverted={false}
            data-outline={false}
            data-reacted={false}
            data-shallow-disabled={false}
            data-size={20}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "color": "pink",
              }
            }
            type="button"
          >
            <Reaction
              name="haha"
            >
              <div
                className="md-reaction-wrapper md-icon-scales"
                data-name="haha"
                data-scale={12}
              />
            </Reaction>
            <span
              className="reaction-badge-count"
            />
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonPill>
</ReactionBadge>
`;
